# marketing-data

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: Coffee- Coffee Shops.csv  IDEA_Lab_Locations_With_Phones.csv  Library_Locations_Parsed.csv  North_County_Rec_Centers.csv  North_County_Rec_Centers.qmd  SchoolNames.txt  School_Outreach_2025.csv  Supervisor_Districts.geojson  bids_datasd.geojson  cd_mi_20.geojson  cd_mi_70.geojson  census10_timeseries.pkl  census20_timeseries.pkl  competitors-v1.json  competitors.json  computer_companies.csv  computer_companies.geojson  computer_companies.gpkg  computer_companies_vetted.csv  extras.gpkg  kids_timeseries.csv  kids_timeseries.pkl  north_county_libraries.geojson  north_county_middle_schools.csv  north_county_middle_schools.geojson  north_county_rec_center.geojson  north_county_rec_center.qmd  north_libraries.csv  north_libraries.qmd  promise_zone_datasd.geojson  schools.geojson  schools.gpkg  target_libraries.csv  target_libraries_wealth.csv  target_school_sites.csv  target_schools.csv  target_schools.geojson  target_sites.csv  target_sites.geojson  target_sites.qmd  (+3 more)
gis/: Site Survey.qgz
notebooks/: SageExamples.ipynb
notebooks/Nicole_Ng/: schools.ipynb  sd_business.ipynb
notebooks/ericbusboom/: Libraries.ipynb  TargetSites.ipynb  cds.csv  child_density.ipynb  competitors-orig.ipynb  competitors.ipynb  emails.ipynb  emails.txt  emails.yaml  name_map.csv  names.txt  out.csv  schools.ipynb  sd_business.ipynb
notebooks/examples/: child_density.ipynb
notebooks/exaples/: child_density.ipynb  (+1 more)
(+1 files in other folders)
