[project]
name = "marketing-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "census>=0.8.24",
    "censusdata>=1.15.post1",
    "certifi>=2025.4.26",
    "contextily>=1.6.2",
    "geoid>=1.1.7",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "ipython>=9.2.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "osmnx>=2.0.3",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "us>=3.2.0",
]
